added a simple helper function for updating lists of flowables and updated example to reflect that

--- a/examples/Standard Error Example.ipynb
+++ b/examples/Standard Error Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41499439",
+   "id": "f31253aa",
    "metadata": {},
    "source": [
     "# Designing a Self-organizing Endpoint with Even Flow\n",
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "cdda5fee",
+   "execution_count": 1,
+   "id": "b906fe8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from evenflow import flowable, compose_flow\n",
+    "from evenflow.base import flow_sub\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fc7415da",
+   "id": "48bbf48b",
    "metadata": {},
    "source": [
     "## Calculating Standard Error\n",
@@ -63,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cd71f419",
+   "execution_count": 2,
+   "id": "872382b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb62bcc",
+   "id": "74eb2ffc",
    "metadata": {},
    "source": [
     "And of course we want to tie this all together into a calcuation of standard error:"
@@ -109,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6546c0eb",
+   "execution_count": 3,
+   "id": "60bc4234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8985b5e9",
+   "id": "9a8a2a2c",
    "metadata": {},
    "source": [
     "## What are the benefits of all this?\n",
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2889d91b",
+   "id": "d423416f",
    "metadata": {},
    "source": [
     "\n",
@@ -158,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "93accf5f",
+   "execution_count": 4,
+   "id": "6becd929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e4f6472",
+   "id": "9ddfdbaa",
    "metadata": {},
    "source": [
     "It's worth pointing out that, for all intents and purposes, `flowable` functions are *just regular functions*. We can now easily test just the endpoint without worrying about the rest:"
@@ -182,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c7352be4",
+   "id": "523740ce",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5541f03",
+   "id": "2c44f889",
    "metadata": {},
    "source": [
     "This function just takes in *standard error* and returns JSON, but recall we want an endpoint that takes in *samples* and returns JSON. This will be achieved by composing all these functions together."
@@ -210,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2e524998",
+   "execution_count": 6,
+   "id": "2d91fff8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad44d2ff",
+   "id": "624edb0e",
    "metadata": {},
    "source": [
     "Remember: the order of the functions is irrelevant for `evenflow`, you don't have to think about it all. All we need to do is pass these to `compose_flow` and we'll get our endpoint:"
@@ -231,8 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8ab6db08",
+   "execution_count": 7,
+   "id": "870f69b8",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        "<function evenflow.compose.compute_json_resp(samples)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186dfbe3",
+   "id": "3e651290",
    "metadata": {},
    "source": [
     "As you can see, the function signature is exactly what we wanted, it takes in `samples` and returns out `json_resp`. Let's try it out!"
@@ -261,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ed09bde8",
+   "execution_count": 8,
+   "id": "972ddede",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
        "'{\"standard_error\": 0.5590169943749475}'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3da587b",
+   "id": "21c8bc3c",
    "metadata": {},
    "source": [
     "And there we have it, a self-organized endpoint that returns a JSON response giving the standard error of a collection of samples!\n",
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3630fff",
+   "id": "4387efd3",
    "metadata": {},
    "source": [
     "## Updating Systems: Adding Bessel's Correction\n",
@@ -305,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b199b68d",
+   "id": "e23414df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,28 +317,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26434a59",
+   "id": "86ccffb9",
    "metadata": {},
    "source": [
     "Notice that all that matters is that this new function returns the same *output* as our old. We could easily add more inputs if we wanted (and of course add additional `flowable` functions that output those inputs if necessary). The system is *very* robust to changing and adding inputs.\n",
     "\n",
-    "Next we remove the `variance` component, and add in our `bessels_correction` component. We could do this with `remove` and `append` but I personally like a more function approach. Additionally we'll use the `output` property of the function, added by `flowable`, to remove based on the output rather than the functions name (which we might not know in practice)."
+    "Next we remove the `variance` component, and add in our `bessels_correction` component. It's not too hard to write this from scratch, but `evenflow` has a helper function `flow_sub` which will swap out a particular component from a list with one matching its' output type:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9ac1105b",
+   "id": "a20273d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_components_updated = [component for component in endpoint_components\n",
-    "                               if not component.output == 'var'] + [bessels_correction]"
+    "endpoint_components_updated = flow_sub(endpoint_components, bessels_correction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1c9d462c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "json_resp\n",
+      "sample_mean\n",
+      "square_distance\n",
+      "se\n",
+      "sum_of_squares\n",
+      "n_samples\n",
+      "var\n",
+      "std_dev\n"
+     ]
+    }
+   ],
+   "source": [
+    "for comp in endpoint_components:\n",
+    "    print(comp.output)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c90407d",
+   "id": "06fe852c",
    "metadata": {},
    "source": [
     "Here we can see \"order doesn't matter\" is not just a clever trick, it allow us to very easily mutate the components of a function without worry. Let's build a new version of our endpoint:"
@@ -345,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "227bed59",
+   "execution_count": 12,
+   "id": "7abed3cf",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +381,7 @@
        "'{\"standard_error\": 0.6454972243679028}'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6576a862",
+   "id": "fdf00c30",
    "metadata": {},
    "source": [
     "And there we go! Without needing knowledge or even *access* to *any* of the components, even the one we're replacing, we can trivially update the behavior of our endpoint."
@@ -375,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45e38ab",
+   "id": "519212d6",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -385,9 +411,9 @@
     "- made of very simple functions\n",
     "- extremely easy to test\n",
     "- easy to extend\n",
-    "- easy to modify *with no access to the original components code*\n",
+    "- easy to modify *with no access to the original component code*\n",
     "\n",
-    "That last bullet point is particularly important as systems grow in complexity. You've likely worked with a large production system and had to change the behavior of a specific part. This typically involves a deep exploration of the code base and being careful not to change the behavior of the system by accident. In a system built with `evenflow` the *only information you need* is the names of the inputs and outputs and the ability to modify *which* components are used. \n",
+    "That last bullet point is particularly important as systems grow in complexity. You've likely worked with a large production system and had to change the behavior of a specific part. This typically involves a deep exploration of the code base and being careful not to change the behavior of the system by accident (i.e. introducing more bugs!). In a system built with `evenflow` the *only information you need* is the names of the inputs and outputs and the ability to modify *which* components are used. \n",
     "\n",
     "Also notice that because we worked in a functional style, we never had to change the behavior of `endpoint_v1`, in fact it still works *exactly* as it did before. This type of change would be impossible if we needed to modify the `variance` function itself.\n",
     "\n",
