--- a/examples/Standard Error Example.ipynb
+++ b/examples/Standard Error Example.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "from evenflow import flowable, compose_flow\n",
+    "from evenflow.compose import  _compose_flow, build_execution_stages\n",
     "from evenflow.base import flow_sub\n",
     "import numpy as np"
    ]
